<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.allo.fragmentstacks.random.RandomFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_instructions" />

        <Button
            android:id="@+id/bt_generate_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_generate_random" />

        <TextView
            android:id="@+id/tv_generated_number"
            style="@style/random_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="15" />

        <Button
            android:id="@+id/bt_new_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/button_new_fragment" />

        <CheckBox
            android:id="@+id/cb_pass_random"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/pass_random_number_as_argument" />

        <CheckBox
            android:id="@+id/cb_add_to_backstack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/add_to_backstack" />

        <CheckBox
            android:id="@+id/cb_retain_instance_state"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="false"
            android:text="@string/retain_instance_state" />

    </LinearLayout>

</ScrollView>
